--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*::-webkit-scrollbar{
+    width: 2px;
+    background-color: rgb(191, 228, 243);
+}
+
+*::-webkit-scrollbar-thumb{
+    background-color: rgb(0, 183, 255);
+}
+
+body{
+    overflow-x: hidden;
+    overflow-y: auto;
+}
