--- a/src/global.css
+++ b/src/global.css
@@ -33,3 +33,24 @@ textarea{
 .wrapper{
     max-width: 1250px;
 }
+
+/* Themes */
+.light {
+    --primary: 255, 0, 0;
+    --background: 255, 255, 255;
+    --border: 229, 229, 229;
+    --text_primary: 15, 15, 15;
+    --text_secondary: 96, 96, 96;
+    --text_contrast: 255, 255, 255;
+    --notification: 255, 69, 0;
+}
+
+.dark {
+    --primary: 255, 0, 0;
+    --background: 24, 24, 24;
+    --border: 50, 50, 50;
+    --text_primary: 255, 255, 255;
+    --text_secondary: 150, 150, 150;
+    --text_contrast: 255, 255, 255;
+    --notification: 255, 69, 0;
+}
